tests/snapshots/conformance__snapshot_baked_svg_for_every_sample@hello.lini.snap
---
source: tests/conformance.rs
expression: svg
input_file: samples/hello.lini
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-57.665 -48.5 115.33 97" width="115.33" height="97" class="lini lini-scope-892083e5">
  <style>
    .lini-scope-892083e5, .lini-scope-892083e5 text { font-family: "Google Sans", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; }
    .lini-scope-892083e5 { font-size: 15px; font-weight: 500; color: black; }
    .lini-scope-892083e5 .lini-canvas { fill: white; }
    .lini-scope-892083e5 .lini-block { fill: none; stroke: none; stroke-width: 2; stroke-dasharray: none; }
    .lini-scope-892083e5 .lini-text { fill: currentColor; stroke: none; text-anchor: middle; }
    .lini-scope-892083e5 .lini-box { fill: white; stroke: #444; stroke-width: 2; }
  </style>
  <defs>
    <path id="lini-g1500-0" d="…"/>
    <path id="lini-g1500-213" d="…"/>
    <path id="lini-g1500-238" d="…"/>
    <path id="lini-g1500-259" d="…"/>
    <path id="lini-g1500-271" d="…"/>
  </defs>
  <rect class="lini-canvas" x="-57.665" y="-48.5" width="115.33" height="97"/>
  <g class="lini-scene">
    <g class="lini-node lini-box lini-block" transform="translate(0,0)">
      <rect x="-36.665" y="-27.5" width="73.33" height="55" rx="8" ry="8"/>
      <g class="lini-text">
        <use href="#lini-g1500-238" transform="translate(-16.665 5.37) scale(0.015 -0.015)"/>
        <use href="#lini-g1500-213" transform="translate(-7.95 5.37) scale(0.015 -0.015)"/>
        <use href="#lini-g1500-259" transform="translate(0.63 5.37) scale(0.015 -0.015)"/>
        <use href="#lini-g1500-259" transform="translate(4.125 5.37) scale(0.015 -0.015)"/>
        <use href="#lini-g1500-271" transform="translate(7.62 5.37) scale(0.015 -0.015)"/>
      </g>
    </g>
  </g>
  <g class="lini-links"/>
</svg>
